// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fluent-linter-action Reports errors correctly matching problemMatcher: __fixtures__/invalid.conf 1`] = `
Object {
  "column": "0",
  "file": "<PROJECT_ROOT>/__fixtures__/invalid.conf",
  "line": "0",
  "message": "john cannot initialize input plugin: john ",
  "severity": "error",
}
`;

exports[`fluent-linter-action Reports errors correctly matching problemMatcher: __fixtures__/invalid.conf 2`] = `
Object {
  "column": "0",
  "file": "<PROJECT_ROOT>/__fixtures__/invalid.conf",
  "line": "0",
  "message": "syslog Unknown syslog mode abc            ",
  "severity": "error",
}
`;

exports[`fluent-linter-action Reports errors correctly matching problemMatcher: __fixtures__/invalid.conf 3`] = `
Object {
  "column": "0",
  "file": "<PROJECT_ROOT>/__fixtures__/invalid.conf",
  "line": "0",
  "message": "parser missing 'key_name'                 ",
  "severity": "error",
}
`;

exports[`fluent-linter-action Reports missing file with @INCLUDE: __fixtures__/scenarios/withInclude/wrongPathInclude.conf 1`] = `
Object {
  "column": "1",
  "file": "<PROJECT_ROOT>/__fixtures__/scenarios/withInclude/wrongPathInclude.conf",
  "line": "1",
  "message": "Can not read file tail.conf ",
  "severity": "error",
}
`;
